--- a/index.html
+++ b/index.html
@@ -11,20 +11,10 @@
     <header>
         <a href="/"><img src="" alt="logo"></a>
         <nav>
-            <ul>
-                <li>
-                    <a href="">Lorem.</a>
-                </li>
-                <li>
-                    <a href="">Animi?</a>
-                </li>
-                <li>
-                    <a href="">Quod!</a>
-                </li>
-                <li>
-                    <a href="">Optio.</a>
-                </li>
-            </ul>
+            <a href="">Lorem.</a>
+            <a href="">Animi?</a>
+            <a href="">Quod!</a>
+            <a href="">Optio.</a>
         </nav>
         <button>navba-expander</button>
     </header>
@@ -33,37 +23,202 @@
             <h1>
                 Lorem ipsum dolor sit.
             </h1>
-
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam ab mollitia aperiam, itaque qui totam
+                natus minus facere atque quidem dignissimos esse error nostrum laudantium saepe, maiores deserunt odio
+                quia. Ad, doloribus incidunt. Debitis unde molestiae corporis dolores odit modi?
+            </p>
+            <button>
+                Lorem, ipsum.
+            </button>
+            <button>
+                Iusto, sapiente.
+            </button>
         </section>
         <section>
             <h2>
-
+                Features
             </h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt voluptatum enim est consequatur assumenda
+                praesentium iste laudantium quia dolores sit.
+            </p>
+            <ul>
+                <li>
+                    <h3>
+                        Lorem ipsum dolor sit.
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde perspiciatis officiis dolores
+                        veniam totam laborum!
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        Dolor sit.
+                    </h3>
+                    <p>
+                        Iusto, quisquam doloremque. Vero commodi et fuga possimus harum repudiandae laudantium
+                        voluptatibus nihil quae doloribus?
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        Eaque facilis
+                    </h3>
+                    <p>
+                        Laudantium ipsa eaque facilis, ducimus ipsam ut totam, quasi inventore illo voluptas non unde
+                        commodi.
+                    </p>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>
-
+                Contents
             </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eveniet eligendi nobis repellat!
+            </p>
+            <ul>
+                <li>
+                    <h3>
+                        Work
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem dolorum ullam deserunt?
+                    </p>
+                    <button>
+                        Sign up
+                    </button>
+                    <img src="" alt="Work card image">
+                </li>
+                <li>
+                    <h3>
+                        Lorem.
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa libero architecto nulla
+                        repudiandae corporis repellendus?
+                    </p>
+                    <button>
+                        Try For Free
+                    </button>
+                    <img src="" alt="Lorem card image">
+                </li>
+            </ul>
         </section>
         <section>
             <h2>
-
+                Gallery
             </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt!
+            </p>
+            <ul>
+                <li>
+                    <img src="" alt="gallery preview image">
+                </li>
+                <li>
+                    <img src="" alt="gallery preview image">
+                </li>
+                <li>
+                    <img src="" alt="gallery preview image">
+                </li>
+                <li>
+                    <img src="" alt="gallery preview image">
+                    \
+                </li>
+            </ul>
+            <button>
+                Lorem, ipsum.
+            </button>
         </section>
         <section>
             <h2>
-
+                Partners
             </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nemo necessitatibus, culpa rem mollitia
+                quos. Quod molestias quaerat quasi ullam!
+            </p>
+            <ul>
+                <li>
+                    <img src="" alt="appstore logo">
+                </li>
+                <li>
+                    <img src="" alt="somecompany logo">
+                </li>
+                <li>
+                    <img src="" alt="android logo">
+                </li>
+                <li>
+                    <img src="" alt="somecompany logo">
+                </li>
+                <li>
+                    <img src="" alt="somecompany logo">
+                </li>
+                <li>
+                    <img src="" alt="IBM logo">
+                </li>
+            </ul>
+            <button>
+                Lorem, ipsum.
+            </button>
         </section>
         <section>
             <h2>
-
+                Testimonials
             </h2>
+            <ul>
+                <li>
+                    <img src="" alt="avatar">
+                    <p>Lorem, ipsum.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, provident corrupti. Debitis
+                        ut sit eius veniam doloribus? Illo nam deserunt cum aspernatur odit. Corrupti accusantium fuga
+                        nobis nulla tempore nesciunt et corporis facere hic aspernatur? Quos impedit aspernatur officia
+                        id?
+                    </p>
+                </li>
+                <li>
+                    <img src="" alt="avatar">
+                    <p>Lorem, ipsum.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur commodi cumque consequatur
+                        deserunt natus. Fuga voluptatum vel eos asperiores nostrum tempore distinctio, provident maiores
+                        ex pariatur culpa harum aut, id est! Impedit in minus quidem modi dolore aliquid mollitia
+                        maxime.
+                    </p>
+                </li>
+                <li>
+                    <img src="" alt="avatar">
+                    <p>Lorem, ipsum.</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit animi ea veniam laudantium et
+                        consequatur est? Temporibus, quod maxime. Earum quia autem fuga maxime tempora, quas illo
+                        laboriosam deserunt deleniti iste mollitia voluptates ipsa reiciendis, aspernatur unde cumque,
+                        esse modi.
+                    </p>
+                </li>
+                <li>
+                    <img src="" alt="avatar">
+                    <p>Lorem, ipsum.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam illum iure quo distinctio
+                        voluptatum quia repellendus quam at facilis ipsa accusamus, consectetur et nisi a velit! Beatae
+                        est placeat sequi pariatur qui eos dignissimos architecto facilis ipsa ducimus! Magnam,
+                        dignissimos.
+                    </p>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>
-
+                Lorem ipsum dolor sit amet.
             </h2>
+            <button>Lorem, ipsum dolor.</button>
+            <img src="" alt="lightning fast prototyping">
         </section>
     </main>
     <footer>
