--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                 </li>
                 <li>
                     <img src="" alt="gallery preview image">
-                    \
                 </li>
             </ul>
             <button>
@@ -222,7 +221,82 @@
         </section>
     </main>
     <footer>
-
+        <ul>
+            <li>
+                <h2>Fingertipe</h2>
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Examples</a>
+                    </li>
+                    <li>
+                        <a href="">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="">Updates</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2>Resources</h2>
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Examples</a>
+                    </li>
+                    <li>
+                        <a href="">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="">Updates</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2>About</h2>
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Examples</a>
+                    </li>
+                    <li>
+                        <a href="">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="">Updates</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="" alt="location logo">
+                <p>
+                    Lorem ipsum dolor sit.
+                </p>
+            </li>
+            <li>
+                <img src="" alt="phone logo">
+                <p>
+                    Lorem ipsum dolor sit.
+                </p>
+            </li>
+            <li>
+                <img src="" alt="twitter logo">
+            </li>
+            <li>
+                <img src="" alt="facebook logo">
+            </li>
+            <li>
+                <img src="" alt="linkedin logo">
+            </li>
+        </ul>
     </footer>
 </body>
 
