Add testimonial commenter status element

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 <li>
                     <img src="" alt="avatar">
                     <p>Lorem, ipsum.</p>
+                    <p>Designer</p>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, provident corrupti. Debitis
                         ut sit eius veniam doloribus? Illo nam deserunt cum aspernatur odit. Corrupti accusantium fuga
@@ -183,6 +184,7 @@
                 <li>
                     <img src="" alt="avatar">
                     <p>Lorem, ipsum.</p>
+                    <p>Designer</p>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur commodi cumque consequatur
                         deserunt natus. Fuga voluptatum vel eos asperiores nostrum tempore distinctio, provident maiores
@@ -193,6 +195,7 @@
                 <li>
                     <img src="" alt="avatar">
                     <p>Lorem, ipsum.</p>
+                    <p>Designer</p>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit animi ea veniam laudantium et
                         consequatur est? Temporibus, quod maxime. Earum quia autem fuga maxime tempora, quas illo
@@ -203,6 +206,7 @@
                 <li>
                     <img src="" alt="avatar">
                     <p>Lorem, ipsum.</p>
+                    <p>Designer</p>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam illum iure quo distinctio
                         voluptatum quia repellendus quam at facilis ipsa accusamus, consectetur et nisi a velit! Beatae
